[gd_scene load_steps=3 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://buttonhandler.gd" type="Script" id=2]

[node name="main" type="Node"]

script/script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.25
one_shot = false
autostart = true

[node name="logPanel" type="Panel" parent="."]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 250.0
margin/top = 40.0
margin/right = 10.0
margin/bottom = 10.0

[node name="log" type="RichTextLabel" parent="logPanel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 10.0
margin/bottom = 10.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="Tree" type="Tree" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 40.0
margin/right = 250.0
margin/bottom = 10.0

[node name="testBtn" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 110.0
margin/top = 10.0
margin/right = 203.0
margin/bottom = 30.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "test"
flat = false
script/script = ExtResource( 2 )

[node name="logBtn" type="CheckButton" parent="."]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 250.0
margin/top = 10.0
margin/right = 10.0
margin/bottom = 32.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 0
shortcut = null
text = "show/hide log"
flat = false
align = 0
script/script = ExtResource( 2 )

[node name="addLine" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 103.0
margin/bottom = 30.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "neue Zeile"
flat = false
script/script = ExtResource( 2 )

[node name="AcceptDialog" type="AcceptDialog" parent="."]

visibility/visible = false
visibility/opacity = 0.85
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 630.0
margin/top = 230.0
margin/right = 440.0
margin/bottom = 160.0
popup/exclusive = false
window/title = "Info"
dialog/hide_on_ok = true

[node name="WindowDialog" type="WindowDialog" parent="."]

visibility/visible = false
visibility/opacity = 0.85
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1030.0
margin/top = 60.0
margin/right = 430.0
margin/bottom = -280.0
popup/exclusive = false
window/title = "Kategorien"

[node name="Tree1" type="Tree" parent="WindowDialog"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 40.0

[node name="addCategory" type="Button" parent="WindowDialog"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 130.0
margin/top = 30.0
margin/right = 12.0
margin/bottom = 10.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "neue Kategorie"
flat = false
script/script = ExtResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="pressed" from="testBtn" to="testBtn" method="_on_testBtn_pressed"]

[connection signal="pressed" from="logBtn" to="logBtn" method="_on_logBtn_pressed"]

[connection signal="pressed" from="addLine" to="addLine" method="_on_addLine_pressed"]

[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]

[connection signal="visibility_changed" from="AcceptDialog" to="." method="_on_AcceptDialog_visibility_changed"]

[connection signal="visibility_changed" from="WindowDialog" to="." method="_on_WindowDialog_visibility_changed"]

[connection signal="button_pressed" from="WindowDialog/Tree1" to="." method="_on_Tree1_button_pressed"]

[connection signal="item_edited" from="WindowDialog/Tree1" to="." method="_on_Tree1_item_edited"]

[connection signal="pressed" from="WindowDialog/addCategory" to="WindowDialog/addCategory" method="_on_addCategory_pressed"]


